--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,10 @@ body{
     background-color: var(--couleur-background-bouton-select);
     border: solid 3px var(--couleur-texte-bleu);
 }
+.btn2active{
+    background-color: var(--couleur-background-bouton-select);
+    border: solid 3px var(--couleur-texte-bleu);
+}
 #ptiBoite{
     display: flex;
     height: 50px;
@@ -195,9 +199,11 @@ body{
     justify-content: center;    
 }
 #AutreMontant{
-    width: 82%;
-    height: 50px;
+    color: var(--couleur-texte);
+    width: 73%;
+    height: 26px;
     background-color: var(--couleur-background-bouton);
+    padding: 10px;
 }
 #valid{
     background-color: var(--couleur-texte-bleu);
